# AgentDashboard

./: .gitignore  BUILD-SPEC.md  INSTALL.md  P0-FINDINGS.md  README.md
.claude/: launch.json
.github/workflows/: release.yml
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
sidecar/: README.md  improve-backlog.json  package.json  perf-backlog.json  planner.mjs  selftest.mjs  ui-backlog.json
sidecar/agents/: research.mjs
sidecar/hooks/: policy-hook.mjs
sidecar/scripts/: add-idea.js  autonomous-cycle.js  cockpit.js  prove-enforcement.js  prove-spine.js  release.js  reset.js  run-cycle.js  self-cycle.js  self-loop.js  smoke-documentation.js  smoke-roles.js  smoke-training.js
sidecar/src/: autonomous.js  config.js  db.js  documentation.js  event-store.mjs  governance.js  loop.js  policy.js  roles.js  server.js  training.js  worker-settings.js  worker.js  worktree.js
sidecar/test/: console-parser.test.mjs  documentation.test.mjs  planning_pipeline.test.mjs  shortid.test.mjs  truncate.test.mjs
sidecar/web/: app.js  index.html  style.css
