[package]
name = "agent-dashboard"
version = "0.1.0"
description = "AgentDashboard desktop wrapper — Tauri 2 shell around the cockpit web UI"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

# See https://doc.rust-lang.org/cargo/reference/manifest.html for Cargo.toml keys.

[lib]
name = "agent_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Desktop-only plugins. The updater is not available on mobile targets, so it is
# gated behind the same `cfg(desktop)` guard used in lib.rs.
[target.'cfg(desktop)'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
