[package]
name = "agent-dashboard"
version = "0.1.0"
description = "AgentDashboard desktop wrapper — Tauri 2 shell around the cockpit web UI"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

# See https://doc.rust-lang.org/cargo/reference/manifest.html for Cargo.toml keys.

[lib]
name = "agent_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Updater is desktop-only. Must use REAL target_os cfgs that Cargo evaluates during
# dependency resolution — the previous `cfg(desktop)` is a Tauri compile-time cfg that
# Cargo IGNORES, so the crate was silently dropped (the unresolved-import build error).
# lib.rs still gates the updater code with #[cfg(desktop)] so mobile would skip it.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
